fix overflow

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -9,7 +9,9 @@ html, body, div {
 }
 
 html, body {
+    width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 body {
